# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  db.sqlite3  manage.py  mydb.sqlite3  pyproject.toml  render.yaml  setup.cfg
.github/workflows/: build.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0005_alter_label_options_alter_label_created_at_and_more.py
labels/templates/labels/: create.html  delete.html  index.html  label_confirm_delete.html  label_form.html  label_list.html  label_update_form.html  update.html
locale/en/LC_MESSAGES/: django.mo  (+1 more)
statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_created_at.py  0003_alter_status_name.py  0004_alter_status_options_alter_status_created_at_and_more.py  0005_alter_status_options_alter_status_created_at_and_more.py
task_manager/: forms.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: load_fixture.py  sample.json  user_data.json
task_manager/labels/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: admin.py  filters.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  confirm_deletion.html  index.html  users.html
task_manager/users/: forms.py  mixins.py  tests.py  urls.py  views.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_assigned_to.py  0003_alter_task_author.py  0006_task_labels.py  0007_alter_task_labels.py  0008_rename_assigned_to_task_executor.py  0009_alter_task_options_alter_task_author_and_more.py
templates/: form.html
templates/layout/: base.html
templates/registration/: delete.html  update.html
templates/statuses/: delete.html  index.html
templates/tasks/: task_list.html
users/: forms.py  mixins.py  tests.py  urls.py  views.py
(+49 files in other folders)
